// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/changelog getChangeLogJSON filters unnecessary warns 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "github": "chalk/chalk",
    "githubBaseURL": "https://github.com/",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": undefined,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": undefined,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports github enterprise and github enterprise changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "github": "chalk/chalk",
    "githubBaseURL": "https://github-enterprise.example.com/",
    "repository": "https://github-enterprise.example.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": undefined,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": undefined,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github-enterprise.example.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports github enterprise and github.com changelog 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "github": "chalk/chalk",
    "githubBaseURL": "https://github.com/",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": undefined,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": undefined,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports node engines 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "github": "chalk/chalk",
    "githubBaseURL": "https://github.com/",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": undefined,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": undefined,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON uses GitHub tags 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "github": "chalk/chalk",
    "githubBaseURL": "https://github.com/",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": undefined,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/v2.3.0...v2.4.2",
      },
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/v2.3.0...v2.4.2",
      },
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/2.2.2...v2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/2.2.2...v2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/1.0.0...2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/1.0.0...2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON works without Github 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "github": "chalk/chalk",
    "githubBaseURL": "https://github.com/",
    "repository": "https://github.com/chalk/chalk",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": undefined,
      "version": "2.5.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2017-12-24T03:20:46.238Z",
      "releaseNotes": undefined,
      "version": "2.4.2",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "date": "2017-10-24T03:20:46.238Z",
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_2.2.2...npm_2.3.0",
      },
      "version": "2.3.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://github.com/chalk/chalk/compare/npm_1.0.0...npm_2.2.2",
      },
      "version": "2.2.2",
    },
  ],
}
`;
